# Spider

./: README.md
client/Spider/: CMakeLists.txt
client/Spider/include/Core/: KeyReader.hpp  Spider.hpp
client/Spider/include/DB/: DBHandler.hpp
client/Spider/include/Event/: Click.hpp  ClickAssociation.hpp  Event.hpp  EventHandler.hpp  EventQueue.hpp  IEvent.hpp  Keyboard.hpp  Request.hpp  UserActivity.hpp
client/Spider/include/Exception/: CoreException.hpp  SpiderException.hpp
client/Spider/include/Socket/: Packet.hpp  PacketManager.hpp  TcpClientSocket.hpp
client/Spider/include/ssl/: AES.hpp  RSAKeys.hpp  Sha.hpp  ssl.hpp
client/Spider/src/: main.cpp
client/Spider/src/Core/: KeyReader.cpp  Spider.cpp
client/Spider/src/DB/: DBHandler.cpp
client/Spider/src/Event/: Click.cpp  EventHandler.cpp  EventQueue.cpp  Keyboard.cpp  Request.cpp  UserActivity.cpp
client/Spider/src/Socket/: PacketManager.cpp  TcpClientSocket.cpp
client/Spider/src/ssl/: AES.cpp  RSAKeys.cpp
doc/ClassDiagram/Client/: Client-Core.puml  Client-DB.puml  Client-Event.puml  Client-ExceptionSystem.puml  Client-ssl.puml  Client.puml
doc/ClassDiagram/Server/: client_socket.puml  uml_server.puml
doc/Doxygen/Client/html/: _a_e_s_8hpp.html  _a_e_s_8hpp_source.html  _click_8hpp_source.html  _click_association_8hpp.html  _click_association_8hpp_source.html  _core_exception_8hpp.html  _core_exception_8hpp_source.html  _d_b_exception_8hpp.html  _d_b_exception_8hpp_source.html  _d_b_handler_8hpp.html  _d_b_handler_8hpp_source.html  _event_8hpp.html  _event_8hpp_source.html  _event_handler_8hpp.html  _event_handler_8hpp_source.html  _event_queue_8hpp.html  _event_queue_8hpp_source.html  _i_event_8hpp.html  _i_event_8hpp_source.html  _key_reader_8hpp.html  _key_reader_8hpp_source.html  _keyboard_8hpp_source.html  _packet_8hpp_source.html  _packet_manager_8hpp_source.html  _r_s_a_keys_8hpp.html  _r_s_a_keys_8hpp_source.html  _request_8hpp_source.html  _sha_8hpp.html  _sha_8hpp_source.html  _spider_8hpp.html  _spider_8hpp_source.html  _spider_exception_8hpp.html  _spider_exception_8hpp_source.html  _tcp_client_socket_8hpp_source.html  _user_activity_8hpp.html  _user_activity_8hpp_source.html  annotated.html  class_c_lick.html  class_spider_1_1_core_1_1_key_reader-members.html  class_spider_1_1_core_1_1_key_reader.html  (+63 more)
doc/Doxygen/Client/latex/: _a_e_s_8hpp.tex  _click_association_8hpp.tex  _core_exception_8hpp.tex  _d_b_exception_8hpp.tex  _d_b_handler_8hpp.tex  _event_8hpp.tex  _event_handler_8hpp.tex  _event_queue_8hpp.tex  _i_event_8hpp.tex  _key_reader_8hpp.tex  _r_s_a_keys_8hpp.tex  _sha_8hpp.tex  _spider_8hpp.tex  _spider_exception_8hpp.tex  _user_activity_8hpp.tex  annotated.tex  class_c_lick.tex  class_spider_1_1_core_1_1_key_reader.tex  class_spider_1_1_core_1_1_spider.tex  class_spider_1_1_core_exception.eps  class_spider_1_1_core_exception.tex  class_spider_1_1_d_b_1_1_d_b_handler.tex  class_spider_1_1_d_b_exception.eps  class_spider_1_1_d_b_exception.tex  class_spider_1_1_event_1_1_click.eps  class_spider_1_1_event_1_1_click.tex  (+33 more)
server/: CMakeLists.txt  Readme.md
server/doc/: server_socket.puml
server/example/client/: CMakeLists.txt
server/example/client/include/Network/: ClientNetwork.hpp
server/example/client/src/: main.cpp
server/example/client/src/Network/: ClientNetwork.cpp
server/example/spider_client/: CMakeLists.txt
server/example/spider_client/include/Json/: JsonParser.hpp
server/example/spider_client/include/Network/: ClientNetwork.hpp
server/example/spider_client/include/Packet/: PacketManager.hpp
server/example/spider_client/include/Request/: AuthReq.hpp  ClickActivityReq.hpp  DisconnectReq.hpp  KeyInfoReq.hpp  MoveActivityReq.hpp  Request.hpp  RequestManager.hpp
server/example/spider_client/include/Socket/: UdpClientSocket.hpp
server/example/spider_client/src/: main.cpp
server/example/spider_client/src/Json/: JsonParser.cpp
server/example/spider_client/src/Network/: ClientNetwork.cpp
server/example/spider_client/src/Packet/: PacketManager.cpp
server/example/spider_client/src/Request/: CommandReq.cpp  KeyInfoReq.cpp  PingResp.cpp
server/example/spider_client/src/Socket/: UdpClientSocket.cpp
server/include/: SpiderServer.hpp
server/include/Client/: Client.hpp  ClientManager.hpp
server/include/DataRecorder/: IDataRecorder.hpp  SqliteDataRecorder.hpp
server/include/Db/: DBException.hpp  DBServerHandler.hpp
server/include/Json/: JsonParser.hpp
server/include/Network/: ServerNetwork.hpp
server/include/Packet/: Packet.hpp  PacketManager.hpp
server/include/ProgramOption/: Option.hpp  ProgramOption.hpp  ProgramOptionException.hpp
server/include/Request/: AuthResp.hpp  CommandReq.hpp  ErrorReq.hpp  NoticeReceiptReq.hpp  PingReq.hpp  PingResp.hpp  Request.hpp  RequestHandler.hpp
server/include/Socket/: TcpClientSocket.hpp  TcpServerSocket.hpp  UdpServerSocket.hpp
server/include/Util/: Debug.hpp  Singleton.hpp
server/src/: SpiderServer.cpp  main.cpp
server/src/Client/: Client.cpp  ClientManager.cpp
server/src/DataRecorder/: SqliteDataRecorder.cpp
server/src/Db/: DBServerHandler.cpp
server/src/Json/: JsonParser.cpp
server/src/Network/: ServerNetwork.cpp
server/src/ProgramOption/: Option.cpp  ProgramOption.cpp
server/src/Request/: AuthReq.cpp  AuthResp.cpp  ClickActivityReq.cpp  DisconnectReq.cpp  ErrorReq.cpp  NoticeReceiptReq.cpp  PingReq.cpp  Request.cpp  RequestHandler.cpp  RequestManager.cpp
server/src/Socket/: TcpClientSocket.cpp  TcpServerSocket.cpp  UdpServerSocket.cpp
server/src/Util/: Debug.cpp
(+259 files in other folders)
